cmake_minimum_required(VERSION 3.24)
project(Assignment3_2025)

set(CMAKE_CXX_STANDARD 17)

add_executable(Assignment3_2025 main.cpp Battle_Ship.cpp Battle_Ship.h MonCalamariCruiser.cpp MonCalamariCruiser.h XWingSquadron.cpp XWingSquadron.h TIEFighter.cpp TIEFighter.h Player.cpp Player.h StarDestroyer.cpp StarDestroyer.h)
